--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,11 @@
 			<artifactId>dollar-lang</artifactId>
 			<version>1.0-beta2</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
